# AlgoTradingBot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  diagnose_ibkr.py  docker-compose.yml  pyproject.toml  run_ingest_until_done.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml  costs.yaml  features.yaml  ibkr.yaml  labels.yaml  logging.yaml  session.yaml  storage.yaml  universe.yaml
docker/mlflow/: Dockerfile
docs/: ibkr-open-questions.md
docs/adr/: 0000-adr-template.md  0001-storage-architecture.md  0002-broker-abstraction-boundary.md  0003-dataset-versioning-content-addressed-snapshots.md  0004-bar-timestamp-semantics-and-point-in-time-correctness.md  0005-frontier-settling-vs-retroactive-readjustment.md  0006-feature-store-interface-and-point-in-time-contract.md  0007-triple-barrier-label-spec-and-barrier-volatility.md  0008-pit-and-horizon-corrections-from-review.md  0009-validation-framework-cpcv-study-lockbox-leakage-gate.md  0010-multiple-testing-pbo-now-dsr-deferred-trial-counting.md  0011-phase3-kickoff-lightgbm-inner-fold-binary.md  0012-program-scoped-trial-counting.md  0013-context-feature-generator-cross-symbol-pit.md  README.md
docs/experiments/: exp-001-lightgbm-current-features.md  exp-002-calendar-ablation.md  exp-003-conditional-timing.md  exp-004-tail-concentration.md  exp-005-wider-barrier-floor.md
experiments/: exp_001_lightgbm_current_features.py  exp_002_calendar_ablation.py  exp_003_conditional_timing.py  exp_004_tail_concentration.py  exp_005_wider_barrier_floor.py
src/qrp/: __init__.py  base.py
src/qrp/config/: README.md  __init__.py  loader.py  models.py
src/qrp/dataset/: README.md  __init__.py  __main__.py  cli.py  manifest.py  store.py
src/qrp/domain/: README.md  __init__.py  enums.py  models.py  protocols.py
src/qrp/features/: README.md  __init__.py  __main__.py  cli.py  generators.py  protocols.py  store.py  volatility.py
src/qrp/infrastructure/: __init__.py
src/qrp/infrastructure/brokers/: __init__.py
src/qrp/infrastructure/brokers/ibkr/: README.md  __init__.py  adapter.py  pacing.py
src/qrp/infrastructure/storage/: README.md  __init__.py  snapshots.py
src/qrp/ingestion/: README.md  __init__.py  __main__.py  cli.py  orchestrator.py
src/qrp/labels/: README.md  __init__.py  __main__.py  cli.py  protocols.py  store.py  triple_barrier.py
src/qrp/models/: __init__.py  gbm.py
src/qrp/observability/: README.md  __init__.py  logging.py
src/qrp/reporting/: README.md  __init__.py  __main__.py  build.py  cli.py  evidence.py
src/qrp/validation/: README.md  __init__.py  __main__.py  assemble.py  cli.py  conflicts.py  lake.py  leakage.py  lockbox.py  metrics.py  overfitting.py  quality.py  session_index.py  sessions.py  splits.py  study.py  trials.py  weights.py
tests/: conftest.py  support.py
tests/config/: test_loader.py  test_models.py
tests/dataset/: test_dataset.py
tests/domain/: test_models.py
tests/features/: test_cross_symbol_pit.py  test_features.py  test_volatility.py
tests/infrastructure/: test_ibkr_adapter.py  test_pacing.py  test_snapshots.py
tests/ingestion/: test_orchestrator.py
tests/labels/: test_labels.py
tests/models/: test_gbm.py
tests/observability/: test_logging.py
tests/reporting/: test_evidence.py
tests/validation/: test_block_shuffle_acceptance.py  test_cpcv.py  test_framework_integration.py  test_lake.py  test_leakage_suite.py  test_lockbox.py  test_metrics.py  test_overfitting.py  test_study_canary.py  test_study_registry.py  test_trials.py  test_validation.py  test_weights.py
