[project]
name = "qrp"
version = "0.1.0"
description = "TSLA Quantitative Research Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    # IANA timezone database for `zoneinfo`. Required on platforms without a system tz
    # database (e.g. Windows); timezone pinning per CLAUDE.md §5 depends on it.
    "tzdata>=2024.1",
]

# PEP 735 dependency group. Installed with `uv sync` (default), excluded from the
# published/runtime dependency set. Black is deliberately absent (CLAUDE.md §4).
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrp"]

# ---------------------------------------------------------------------------
# Ruff — the ONLY linter/formatter. Black must never be added (CLAUDE.md §4, §9).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "TID", # flake8-tidy-imports (bans relative imports)
    "ANN", # flake8-annotations
    "D",   # pydocstyle
    "RUF", # ruff-specific
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests do not require docstrings, full annotations, or magic-value bans.
"tests/**" = ["D", "ANN", "S101"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — strict, not negotiable (CLAUDE.md §4).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]
