[project]
name = "qrp"
version = "0.1.0"
description = "TSLA Quantitative Research Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    # IANA timezone database for `zoneinfo`. Required on platforms without a system tz
    # database (e.g. Windows); timezone pinning per CLAUDE.md §5 depends on it.
    "tzdata>=2024.1",
    # IBKR SDK — imported ONLY within qrp.infrastructure.brokers.ibkr (ADR-0002),
    # enforced by the import-linter contract below.
    "ib_async>=1.0.1",
    # Columnar data engine for the Parquet lake (ADR-0001). No pandas in the core.
    "polars>=1.0",
    # Exchange session boundaries — a first-class dependency, not a helper (§4, §5).
    "exchange_calendars>=4.5",
    # Validation-framework statistics: AUC ranks now, deflated Sharpe / PBO later (ADR-0009).
    "scipy>=1.11",
    # Postgres client for the lockbox registry (append-only touch counter, I5). Pre-approved in
    # ADR-0009 §3c; the §4 stack + docker-compose.yml already stand up Postgres.
    "psycopg[binary]>=3.1",
    # First Phase-3 model (ADR-0011): native NaN handling, fast, sklearn-style fit(sample_weight=).
    # Deliberately the ONLY GBM library — no XGBoost/CatBoost abstraction until one is needed.
    "lightgbm>=4.0",
]

# PEP 735 dependency group. Installed with `uv sync` (default), excluded from the
# published/runtime dependency set. Black is deliberately absent (CLAUDE.md §4).
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
    "import-linter>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qrp"]

# ---------------------------------------------------------------------------
# Ruff — the ONLY linter/formatter. Black must never be added (CLAUDE.md §4, §9).
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "TID", # flake8-tidy-imports (bans relative imports)
    "ANN", # flake8-annotations
    "D",   # pydocstyle
    "RUF", # ruff-specific
]
# D107: __init__ is documented in the class docstring (Google convention), not separately.
ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests do not require docstrings or full annotations; fakes mirror ib_async's
# camelCase names on purpose (N802/N803/N815).
"tests/**" = ["D", "ANN", "S101", "N802", "N803", "N815"]
# The IBClient protocol mirrors ib_async's camelCase API names on purpose (structural
# typing must match the real client); N802/N803 do not apply there.
"src/qrp/infrastructure/brokers/ibkr/adapter.py" = ["N802", "N803"]

[tool.ruff.format]
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — strict, not negotiable (CLAUDE.md §4).
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
show_error_codes = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# exchange_calendars ships no type stubs (py.typed). It is used only at the calendar
# boundary in qrp.validation.sessions and its outputs are immediately converted to plain
# datetimes / Polars.
[[tool.mypy.overrides]]
module = ["exchange_calendars.*", "scipy.*", "lightgbm.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src", "."]

# ---------------------------------------------------------------------------
# import-linter — enforces the broker boundary (ADR-0002): ib_async may be
# imported only within qrp.infrastructure.brokers.ibkr.
# ---------------------------------------------------------------------------
[tool.importlinter]
root_package = "qrp"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "ib_async is confined to the IBKR adapter (ADR-0002)"
type = "forbidden"
source_modules = ["qrp"]
forbidden_modules = ["ib_async"]
ignore_imports = [
    "qrp.infrastructure.brokers.ibkr.** -> ib_async",
]

# The scoring primitives are behind the Study door (ADR-0009): a metric may be computed only via
# qrp.validation.study, so nothing can bypass purge/embargo, the trial counter, or the deflation.
[[tool.importlinter.contracts]]
name = "Scoring primitives are reachable only through Study (ADR-0009)"
type = "forbidden"
source_modules = ["qrp"]
forbidden_modules = ["qrp.validation.metrics"]
ignore_imports = [
    "qrp.validation.study -> qrp.validation.metrics",
]
